--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.9",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
