--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.9",
