--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.23",
+    "lambda-multipart-parser": "^1.0.1",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
